--- a/finalProject.css
+++ b/finalProject.css
@@ -2,6 +2,14 @@
 
 /*Style for main structure: header, body, and footer*/
 * { margin: 0; padding: 0; }
+a { text-decoration: none; }
+li { list-style: none; }
+a:visited {
+  color: white;
+}
+a:hover {
+  color: red;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,6 +18,7 @@ div.header {
   width: 100%;
   margin: 0 auto;
   background-color: #292924;
+  position: relative;
 }
 div.main-body {
   text-align: center;
@@ -17,7 +26,6 @@ div.main-body {
   color: white;
   padding: 25px;
 }
-
 div.footer {
   height: 150px;
   width: 100%;
@@ -35,11 +43,26 @@ div.footer {
   line-height: 80px;
   letter-spacing: 12px;
 }
-.header > .navigation {
-  top: 30px; 
-  right: 10px;
+.header > .main-nav {
   position: absolute;
+  right: 5px;
+  top: 25px;
 }
+.main-nav > ul {
+  overflow: hidden;
+}
+.main-nav > ul > li {
+  float: left;
+}
+.main-nav > ul > li > a {
+  display: block;
+  padding: 5px 15px;
+  margin-left: 5px;
+  border: 1px solid white;
+  font-size: 18px;
+  border-radius: 10px 10px 10px 10px;
+}
+
 .main-body > #main-page-img {
   display: block; 
   margin-top: 0;
